--- a/lab.ipynb
+++ b/lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "id": "43bcd1a9-37de-401d-ac3f-da9b5105154e",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 0 ns\n",
-      "Wall time: 3.64 ms\n"
+      "CPU times: total: 703 ms\n",
+      "Wall time: 4.02 s\n"
      ]
     }
    ],
@@ -22,7 +22,7 @@
     "import unstructured\n",
     "import pickle\n",
     "import os\n",
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter"
+    "# from langchain_text_splitters import RecursiveCharacterTextSplitter"
    ]
   },
   {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "9705ead6-fa06-414d-8802-f5acb2bb9605",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
    ],
    "source": [
     "%time\n",
-    "pages = load_pdf(\"857irwueifdkjwo9eruj2iroeakdfm\")"
+    "pages = load_pdf(\"0e3ad6ccde4c4675ac0fea7c6ee35bc7\")"
    ]
   },
   {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "9390f20a-7f60-41d7-ba4d-68387cc66d30",
    "metadata": {},
    "outputs": [
@@ -144,23 +144,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The attacker used duct tape to affix Čarek's hand, holding the gun, to his head. Now all he had to do was pull the trigger, and after confirming Čarek's death, remove the tape and any signs of a third party from the room. We don't know who the attacker\n",
-      "was, but he was certainly a professional.\n",
-      "The Salzburg police finally set their sights on the man who appeared at St. Ursula\n",
-      "Clinic at 2:00 AM the day after the murder. It had now been two weeks since Čarek's murder — but the only three people who could possibly identify this man had been killed with an axe...\n",
-      "The police believe there is a connection between the Čarek murder and the man with\n",
-      "the bullet wound who appeared at the hospital, but they do not recognize a link between this man and Kottmann. The fact that all three witnesses were murdered was an unfortunate coincidence. Their line of reasoning is this: the man who killed Čarek was a trained terrorist, and those types of people never have ties to serial killers. Kottmann was the type who acted on his desires and impulses, and not the kind of person who would commit murder at the request of another and commit suicide afterward, to seal the case — which makes sense.\n",
-      "But they have no answer for Kottmann's last words: \"One, two, three... My mission is\n",
-      "complete.\"\n",
-      "An illustration from Dorn in the Darkness. With its wavering message that shifts between good and evil, the Dorn series has a fanatical teen readership, but due to its extreme violence and sexual material, is derisively called \"the most enticing kind of pulp literature\" by critics.\n",
-      "My own personal theory goes like this. The man who checked in to the hospital with the injured arm was the man who killed Čarek. He hoped that the hospital staff would not report his presence to the police, but he had a plan in case they did\n"
+      "Project Title: RAG Document Q&A Chatbot Development\n",
+      "1. Introduction:\n",
+      "The purpose of this document is to outline the requirements for developing a RAG (Retrieval-Augmented Generation) Q&A chatbot with the capability to load and process data from various file formats, store embeddings in a local vector database, and provide a frontend UI for user interaction.\n",
+      "2. Project Overview:\n",
+      "The project involves the development of a RAG Q&A chatbot leveraging state-of-the-art techniques in natural language processing (NLP), machine learning and Generative AI. The Q&A chatbot will be capable of understanding user queries, retrieving relevant information from pre-loaded data files, and presenting the information in a user-friendly manner through a Streamlit-based frontend UI.\n",
+      "3. Functional Requirements:\n",
+      "Data Loading (one time):\n",
+      "The chatbot should be able to load data from various file formats including PDF, WORD, JSON, CSV, Key- value pair, EXCEL, etc. Upon loading, the data should be processed to extract relevant text information for further processing.\n",
+      "Embedding Generation:\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "docs = prep_documents_set(pages)\n",
     "ov = docs_overlap(docs)\n",
-    "print(ov[11])\n"
+    "print(ov[0])\n"
    ]
   },
   {
@@ -302,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
